# StyleO

./: .gitignore  README.md  docker-compose.local.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/core/: __init__.py  config.py  logging_config.py  security.py
backend/db/: __init__.py  setup_db.py  setup_redis.py
backend/db/CRUD/: __init__.py  users.py
backend/models/: Model.py  __init__.py
backend/routes/: __init__.py  auth.py  availability.py  profile.py  recommend.py  users.py  wardrobe.py
backend/services/: __init__.py  ai_service.py  bg_removal.py  image_service.py
backend/workers/: __init__.py  main.py  tasks.py
frontend/: .env.example  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: config.ts
frontend/src/components/: Logo.tsx  NavBar.tsx  Protected_NavBar.tsx  ThemeButton.tsx
frontend/src/components/upload/: OutfitCandidateGrid.tsx  UploadConfirmModal.tsx  (+3 more)
frontend/src/context/: AuthContext.ts  AuthContext.tsx  AuthProvider.tsx
frontend/src/hooks/: useDebounce.tsx
frontend/src/pages/: AboutPage.tsx  ContactPage.tsx  Dashboard.tsx  HomePage.tsx  Login.tsx  ProfilePage.tsx  Recommendations.tsx  Signup.tsx  UploadItem.tsx  Wardrobe.tsx
frontend/src/services/: api.ts
frontend/src/styles/: About.css  Dashboard.css  Home.css  Login.css  NavBar.css  Profile.css  ThemeButton.css  Upload.css  Wardrobe.css
(+1 files in other folders)
