[project]
name = "StyleO-backend"
version = "1.0.0"
description = "Backend for StyleO application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beanie>=2.0.1",
    "email-validator>=2.0.0",
    "fastapi>=0.128.0",
    "motor>=3.7.1",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.9",
    "uvicorn>=0.40.0",
]
